--- a/public/app/directives/list-cities/list-cities.html
+++ b/public/app/directives/list-cities/list-cities.html
@@ -2,49 +2,50 @@
 
     <div class="filter-nav">
         <ul>
-            <li><a href="#" ng-click="getPlacesofCities('4bf58dd8d48988d1fa931735');"><span><img src="images/hotel.png"/></span><p>Hotels</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7105d754a06374d81259');"><span><img src="images/restaurant.png"/></span><p>Restaurant</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4bf58dd8d48988d113951735');"><span><img src="images/gas_station.png"/></span><p>Gas Station</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7105d754a06373d81259');"><span><img src="images/event.png"/></span><p>Events</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7105d754a06378d81259');"><span><img src="images/shop.png"/></span><p>Shop</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7105d754a06376d81259');"><span><img src="images/drinks.png"/></span><p>Drinks</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7104d754a06370d81259');"><span><img src="images/entertainment.png"/></span><p>Entertainment</p></a></li>
-            <li><a href="#" ng-click="getPlacesofCities('4d4b7105d754a06377d81259');"><span><img src="images/outdoor.png"/></span><p>Outdoor</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('hotelstravel');"><span><img src="images/hotel.png"/></span><p>Hotels</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('food');"><span><img src="images/restaurant.png"/></span><p>Restaurant</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('servicestations');"><span><img src="images/gas_station.png"/></span><p>Gas Station</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('event');"><span><img src="images/event.png"/></span><p>Events</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('shopping');"><span><img src="images/shop.png"/></span><p>Shop</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('nightlife');"><span><img src="images/drinks.png"/></span><p>Drinks</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('arts');"><span><img src="images/entertainment.png"/></span><p>Entertainment</p></a></li>
+            <li><a href="#" ng-click="getYelpPlacesofCities('active');"><span><img src="images/outdoor.png"/></span><p>Outdoor</p></a></li>
         </ul>
     </div>
 
     <section class="listPlaces">
         <div id="map" class="map-places-wrapper">
             <ng-map zoom="11" center="[40.74, -74.18]">
-                <marker position="[40.71, -74.21]" title="hello"></marker>
-                <marker position="[40.72, -74.20]" title="marker" animation="Animation.DROP"></marker>
-                <marker position="[40.73, -74.19]" title="drag me" draggable="true"></marker>
-                <marker position="[40.74, -74.18]" title="how" animation="Animation.BOUNCE"></marker>
-                <marker position="[40.75, -74.17]" title="are"></marker>
-                <marker position="[40.76, -74.16]" title="you"
-                  icon="https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png"></marker>
-                <marker position="[40.77, -74.15]" title="from"></marker>
-                <marker position="[40.78, -74.14]" title="allen"></marker>
+                <div class="maps-block" ng-repeat="place in places">
+                    <marker position="[{{place.lat}}, {{place.lng}}]" title="hello"></marker>
+                    <!--<marker position="[40.71, -74.21]" title="hello"></marker>
+                    <marker position="[40.72, -74.20]" title="marker" animation="Animation.DROP"></marker>
+                    <marker position="[40.73, -74.19]" title="drag me" draggable="true"></marker>
+                    <marker position="[40.74, -74.18]" title="how" animation="Animation.BOUNCE"></marker>
+                    <marker position="[40.75, -74.17]" title="are"></marker>
+                    <marker position="[40.76, -74.16]" title="you"
+                      icon="https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png"></marker>
+                    <marker position="[40.77, -74.15]" title="from"></marker>
+                    <marker position="[40.78, -74.14]" title="allen"></marker>-->
+                </div>
             </ng-map>
         </div>
         <div class="list-places-wrapper">
             <div class="container">
                 <div class="list-places-block">
                     <div class="places-block" ng-repeat="place in places">
-                        <div ng-repeat="spot in place">
-                            <div class="individual-place-block">
-                                <div class="individual-place-block-wrapper">
-                                    <div class="place-image-block">
-                                        <span>{{spot.venue.categories[0].shortName}}</span>
-                                        <div class="img-cover"></div>
-                                        <img ng-src="{{spot.venue.photos.groups[0].items[0].prefix}}365x205{{spot.venue.photos.groups[0].items[0].suffix}}"/>
-                                    </div>
-                                    <div class="place-content-block">
-                                        <h4>{{spot.venue.name}}</h4>
-                                        <p>{{spot.venue.location.city}}</p>
-                                        <span class="hide" id="lat">{{spot.venue.lat}}</span>
-                                        <span class="hide" id="lng">{{spot.venue.lng}}</span>
-                                    </div>
+                        <div class="individual-place-block">
+                            <div class="individual-place-block-wrapper">
+                                <div class="place-image-block">
+                                    <span>{{place.placetype}}</span>
+                                    <div class="img-cover"></div>
+                                    <img ng-src="{{place.photo}}"/>
+                                </div>
+                                <div class="place-content-block">
+                                    <h4>{{place.placename}}</h4>
+                                    <p>{{place.city}}</p>
+                                    <span class="hide" id="lat">{{place.lat}}</span>
+                                    <span class="hide" id="lng">{{place.lng}}</span>
                                 </div>
                             </div>
                         </div>
