--- a/public/app/directives/my-trips/my-trips.html
+++ b/public/app/directives/my-trips/my-trips.html
@@ -1,7 +1,7 @@
 <section class="myTrips">
     <div class="nav-wrapper left-small">
         <div class="left-nav">
-            <img src="images/logo-dark.png"/>
+            <a ng-click="viewHomePage()"><img src="images/logo-dark.png"/></a>
         </div>
         <div class="right-nav">
             <ul>
