--- a/public/app/directives/my-trips/my-trips.html
+++ b/public/app/directives/my-trips/my-trips.html
@@ -15,7 +15,6 @@
             <ul>
 
             </ul>
-            <!--<a class="save-trip" ng-click="viewPlaces()"><i class="fa fa-compass" aria-hidden="true"> </i> View Places </a>-->
         </div>
     </div>
 
@@ -26,40 +25,38 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
 
-        <div class="list-mytrip-wrapper">
+        <div class="list-places-wrapper">
             <div class="full-width-container">
-                <div class="list-mytrip-block">
-                    <div class="mytrip-block">
-                        <div class="mytrip-block-wrapper">
-                            <div class="mytrip-overview" ng-repeat="trips in alltrips">
-                                <div class="mytrip-images">
-                                    <div class="square-img" ng-repeat="pitstop in trips.trip_details" style="background-image:url({{pitstop.photo}});">
+                <div class="list-places-block">
+                    <div class="masonry-block">
+                        <div class="places-block" ng-repeat="trips in alltrips">
+                            <div class="individual-place-block item">
+                                <div class="individual-place-block-wrapper">
+                                    <div class="place-image-block animated SlideInUp">
+                                        <div class="img-photo" ng-repeat="pitstop in trips.trip_details" style="background-image:url({{pitstop.photo}});"></div>
+                                        <div class="img-cover"></div>
                                     </div>
-                                </div>
-                                <div class="mytrip-content">
-                                    <div class="mytrip-content-wrapper">
-                                        <h2>{{trips.trip_name}}</h2>
-                                        <h4>Pitstops : {{trips.trip_pitstopcount}}</h4>
-                                        <a ng-click="getRoute($index)" data-text="Route" class="btn">Route</a>
-                                        <a ng-click="getRoute($index)" data-text="Details" class="btn">Details</a>
+                                    <div class="place-content-block">
+                                        <h4>{{trips.trip_name}}</h4>
+
+                                        <div class="distance-price-block">
+                                            <div class="distance-price-left-block">
+                                                {{place.distance}}<span>Miles</span>
+                                            </div>
+                                            <div class="distance-price-right-block">
+                                                <ul>
+                                                    <li>{{trips.trip_start}}</li>
+                                                    <li>{{trips.trip_end}}</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="place-button">
+                                        <a ng-click="viewDetails(trips.trip_id)">View Details</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="mytrip-map">
-                        <ng-map id="Map" zoom="14" default-style="false"
-                        styles="[{'featureType':'water','elementType':'geometry','stylers':[{'color':'#e9e9e9'},{'lightness':17}]},{'featureType':'landscape','elementType':'geometry','stylers':[{'color':'#f5f5f5'},{'lightness':20}]},{'featureType':'road.highway','elementType':'geometry.fill','stylers':[{'color':'#ffffff'},{'lightness':17}]},{'featureType':'road.highway','elementType':'geometry.stroke','stylers':[{'color':'#ffffff'},{'lightness':29},{'weight':0.2}]},{'featureType':'road.arterial','elementType':'geometry','stylers':[{'color':'#ffffff'},{'lightness':18}]},{'featureType':'road.local','elementType':'geometry','stylers':[{'color':'#ffffff'},{'lightness':16}]},{'featureType':'poi','elementType':'geometry','stylers':[{'color':'#f5f5f5'},{'lightness':21}]},{'featureType':'poi.park','elementType':'geometry','stylers':[{'color':'#dedede'},{'lightness':21}]},{'elementType':'labels.text.stroke','stylers':[{'visibility':'on'},{'color':'#ffffff'},{'lightness':16}]},{'elementType':'labels.text.fill','stylers':[{'saturation':36},{'color':'#333333'},{'lightness':40}]},{'elementType':'labels.icon','stylers':[{'visibility':'off'}]},{'featureType':'transit','elementType':'geometry','stylers':[{'color':'#f2f2f2'},{'lightness':19}]},{'featureType':'administrative','elementType':'geometry.fill','stylers':[{'color':'#fefefe'},{'lightness':20}]},{'featureType':'administrative','elementType':'geometry.stroke','stylers':[{'color':'#fefefe'},{'lightness':17},{'weight':1.2}]}]"
-                        >
-                            <directions
-                              draggable="true"
-                              panel="directions-panel"
-                              travel-mode="DRIVING"
-                              waypoints="{{mapWayPoints}}"
-                              origin="{{mapOrigin}}"
-                              destination="{{mapDestination}}">
-                            </directions>
-                        </ng-map>
                     </div>
                 </div>
             </div>
